--- a/index.html
+++ b/index.html
@@ -18,49 +18,220 @@
     <title>Landing</title>
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <div class="header__wrapper">
-          <nav class="header__menu">
-            <ul class="header__menu-list">
-              <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Home</a>
-              </li>
-              <li class="header__menu-item">
-                <a href="#" class="header__menu-link">About</a>
-              </li>
-              <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Contact</a>
-              </li>
-            </ul>
-          </nav>
-          <a href="#" class="logo">Landing</a>
-          <a href="#" class="btn header__btn">Buy Now</a>
+    <div class="wrapper">
+      <header class="heade">
+        <div class="container header__box">
+          <div class="header__wrapper">
+            <nav class="menu">
+              <ul class="menu-list">
+                <li class="menu-item">
+                  <a href="#" class="menu-link">Home</a>
+                </li>
+                <li class="menu-item">
+                  <a href="#" class="menu-link">About</a>
+                </li>
+                <li class="menu-item">
+                  <a href="#" class="menu-link">Contact</a>
+                </li>
+              </ul>
+            </nav>
+            <a href="#" class="logo">Landing</a>
+            <a href="#" class="btn header__btn">Buy Now</a>
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
 
-    <main class="main">
-      <div class="intro">
+      <main class="main">
+        <div class="intro">
+          <div class="container intro__wrapper">
+            <div class="intro__body">
+              <h1 class="intro__title">
+                Introduce Your Product Quickly & Effectively
+              </h1>
+              <p class="intro__text">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+                penatibus et magnis dis parturient montes, nascetur ridiculus
+                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
+                quis, sem. Nulla consequat massa quis enim.
+              </p>
+              <div class="intro__buttom">
+                <a href="" class="intro__buttom-link btn">Purchase UI Kit</a>
+                <a href="" class="intro__buttom-link btn">Learn More</a>
+              </div>
+            </div>
+          </div>
+          <div class="intro__img">
+            <img src="./img/intro.png" alt="image" />
+          </div>
+        </div>
+
+        <section class="advatage">
+          <div class="container advatage__box">
+            <div class="advatage__body">
+              <h2 class="advatage__title">Light, Fast & Powerful</h2>
+              <p class="advatage__text">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+                penatibus et magnis dis parturient montes, nascetur ridiculus
+                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
+                quis, sem. Nulla consequat massa quis enim.
+              </p>
+              <div class="advatage__items">
+                <div class="advatage__item">
+                  <div class="advatage__item-img">
+                    <img src="./img/Icon.svg" alt="img" />
+                  </div>
+                  <h3 class="advatahe__item-title">Title Goes Here</h3>
+                  <p class="advatage__item-text">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                    Aenean commodo ligula eget dolor.
+                  </p>
+                </div>
+                <div class="advatage__item">
+                  <div class="advatage__item-img">
+                    <img src="./img/Icon.svg" alt="img" />
+                  </div>
+                  <h3 class="advatahe__item-title">Title Goes Here</h3>
+                  <p class="advatage__item-text">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                    Aenean commodo ligula eget dolor.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="advatage__img">
+              <img src="./img/advatage.png" alt="" />
+            </div>
+          </div>
+        </section>
+
+        <section class="product">
+          <div class="container">
+            <div class="product__box">
+              <div class="product__img product__img-one">
+                <img src="./img/product-1.png" alt="img" />
+              </div>
+              <div class="product__body">
+                <h2 class="product__title">Light, Fast & Powerful</h2>
+                <p class="product__text">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
+                  natoque penatibus et magnis dis parturient montes, nascetur
+                  ridiculus mus. Donec quam felis, ultricies nec, pellentesque
+                  eu, pretium quis, sem. Nulla consequat massa quis enim.
+                </p>
+              </div>
+            </div>
+            <div class="product__box">
+              <div class="product__img product__img-two">
+                <img src="./img/product-2.png" alt="img" />
+              </div>
+              <div class="product__body">
+                <h2 class="product__title">Light, Fast & Powerful</h2>
+                <p class="product__text">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
+                  natoque penatibus et magnis dis parturient montes, nascetur
+                  ridiculus mus. Donec quam felis, ultricies nec, pellentesque
+                  eu, pretium quis, sem. Nulla consequat massa quis enim.
+                </p>
+              </div>
+            </div>
+            <div class="product__box">
+              <div class="product__img product__img-three">
+                <img src="./img/product-3.png" alt="img" />
+              </div>
+              <div class="product__body">
+                <h2 class="product__title">Light, Fast & Powerful</h2>
+                <p class="product__text">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
+                  natoque penatibus et magnis dis parturient montes, nascetur
+                  ridiculus mus. Donec quam felis, ultricies nec, pellentesque
+                  eu, pretium quis, sem. Nulla consequat massa quis enim.
+                </p>
+                <a href="#" class="btn product__btn">Purchase Now</a>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="price">
+          <div class="container">
+            <div class="price__box">
+              <h2 class="price__title">A Price To Suit Everyone</h2>
+              <p class="price__text">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+                penatibus et magnis dis parturient montes, nascetur ridiculus
+              </p>
+              <div class="price__info">
+                <div class="price__info-title">$40</div>
+                <div class="price__info-sabtitle">UI Design Kit</div>
+                <div class="price__info-text">See, One price. Simple.</div>
+              </div>
+              <a href="#" class="btn price__btn">Purchase Now</a>
+            </div>
+          </div>
+        </section>
+      </main>
+
+      <footer class="footer">
         <div class="container">
-          <div class="intro__body">
-            <div class="intro__title">
-              Introduce Your Product Quickly & Effectively
+          <div class="footer__box">
+            <div class="footer__inner">
+              <div class="footer__inner-text">©2023 Yourcompany</div>
+              <a href="#" class="logo">Landing</a>
+              <a href="#" class="btn footer__inner-btn">Purchase now</a>
             </div>
-            <div class="intro__text">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
-              penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-              Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
-              sem. Nulla consequat massa quis enim.
-            </div>
-            <div class="intro__buttom">
-              <a href="" class="intro__buttom-link btn">Purchase UI Kit</a>
-              <a href="" class="intro__buttom-link btn">Learn More</a>
+            <div class="footer__wrapper">
+              <div class="footer__nav">
+                <nav class="menu">
+                  <ul class="menu-list">
+                    <li class="menu-item">
+                      <a href="#" class="menu-link footer__nav-link">Home</a>
+                    </li>
+                    <li class="menu-item">
+                      <a href="#" class="menu-link footer__nav-link">About</a>
+                    </li>
+                    <li class="menu-item">
+                      <a href="#" class="menu-link footer__nav-link">Contact</a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+              <ul class="footer__socials">
+                <li class="footer__socials-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="./img/facebook.svg" alt="" />
+                  </a>
+                </li>
+                <li class="footer__socials-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="./img/linkedin.svg" alt="" />
+                  </a>
+                </li>
+                <li class="footer__socials-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="./img/twitter.svg" alt="" />
+                  </a>
+                </li>
+                <li class="footer__socials-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="./img//youtube.svg" alt="" />
+                  </a>
+                </li>
+                <li class="footer__socials-item">
+                  <a href="#" class="footer__social-link">
+                    <img src="./img/instagram.svg" alt="" />
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-      </div>
-    </main>
+      </footer>
+    </div>
   </body>
 </html>
