--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <nav class="menu">
               <ul class="menu-list">
                 <li class="menu-item">
-                  <a href="#" class="menu-link">Home</a>
+                  <a href="#home" class="menu-link">Home</a>
                 </li>
                 <li class="menu-item">
-                  <a href="#" class="menu-link">About</a>
+                  <a href="#about" class="menu-link">About</a>
                 </li>
                 <li class="menu-item">
-                  <a href="#" class="menu-link">Contact</a>
+                  <a href="#footer" class="menu-link">Contact</a>
                 </li>
               </ul>
             </nav>
@@ -42,7 +42,7 @@
       </header>
 
       <main class="main">
-        <div class="intro">
+        <div class="intro" id="home">
           <div class="container intro__wrapper">
             <div class="intro__body">
               <h1 class="intro__title">
@@ -66,7 +66,7 @@
           </div>
         </div>
 
-        <section class="advatage">
+        <section class="advatage" id="about">
           <div class="container advatage__box">
             <div class="advatage__body">
               <h2 class="advatage__title">Light, Fast & Powerful</h2>
@@ -177,7 +177,7 @@
         </section>
       </main>
 
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <div class="container">
           <div class="footer__box">
             <div class="footer__inner">
@@ -190,13 +190,19 @@
                 <nav class="menu">
                   <ul class="menu-list">
                     <li class="menu-item">
-                      <a href="#" class="menu-link footer__nav-link">Home</a>
+                      <a href="#home" class="menu-link footer__nav-link"
+                        >Home</a
+                      >
                     </li>
                     <li class="menu-item">
-                      <a href="#" class="menu-link footer__nav-link">About</a>
+                      <a href="#about" class="menu-link footer__nav-link"
+                        >About</a
+                      >
                     </li>
                     <li class="menu-item">
-                      <a href="#" class="menu-link footer__nav-link">Contact</a>
+                      <a href="#footer" class="menu-link footer__nav-link"
+                        >Contact</a
+                      >
                     </li>
                   </ul>
                 </nav>
